--- a/Styles.css
+++ b/Styles.css
@@ -1,1 +1,23 @@
-
+body  {
+	background-color:rgba(6.9,69,6.9,0.2);
+}
+h1  {
+  color:red;
+  text-align:center;
+  text-decoration: underline;
+}
+h2  {
+  text-decoration: underline;
+}
+h3  {
+  text-decoration: underline;
+}
+h4  {
+  text-decoration: underline;
+}
+h5  {
+  text-decoration: underline;
+}
+h6  {
+  text-decoration: underline;
+}
